# agent-governance-demo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
src/agent_governance/: __init__.py  agent_runner.py  circuit_breaker.py  delegation_token.py  governance_bus.py  kill_switch.py
tests/: test_circuit_breaker.py  test_delegation_token.py  test_governance_bus.py  test_integration.py  test_kill_switch.py
